# Landing_Page

./: .gitignore  README.md  landing_page_docs.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
Schema/: README.md  breadcrumb.schema.json  faq.schema.json  index.schema.json  organization.schema.json  schema-loader.js  webpage.schema.json  website.schema.json
core/: asgi.py  context_processors.py  logging_config.py  urls.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
docs/adr/: 0001-content-as-python-constants.md  0002-tailwind-play-cdn-tradeoff.md  0003-logging-strategy.md  0004-site-version-source.md  0005-compiled-tailwind-and-strict-csp-scripts.md
frontend/src/: site.css
pages/: apps.py  content.py  og_image.py  sitemaps.py  urls.py  views.py
pages/static/pages/css/: site.css
pages/static/pages/js/: lucide-init.js
pages/templates/: 404.html  500.html  base.html
pages/templates/components/: cta_button.html  feature_card.html  footer.html  navbar.html
pages/templates/layouts/: marketing.html
pages/templates/pages/: home.html
pages/templates/sections/: contact.html  features.html  hero.html  pricing_teaser.html
pages/templatetags/: nav_tags.py
pages/tests/: test_views.py
requirements/: base.txt
